@@ -69,11 +69,20 @@
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
 						</passws>
+						<internationalshipping translate="label">
+							<label>International shipping</label>
+							<frontend_type>select</frontend_type>							
+							<source_model>adminhtml/system_config_source_yesno</source_model>
+							<sort_order>4</sort_order>
+							<show_in_default>1</show_in_default>
+							<show_in_website>1</show_in_website>
+							<show_in_store>1</show_in_store>
+						</internationalshipping>
 						<livraisontohome translate="label">
 							<label>Delivery at home</label>
 							<frontend_type>select</frontend_type>
 							<source_model>adminhtml/system_config_source_yesno</source_model>
-							<sort_order>4</sort_order>
+							<sort_order>5</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
@@ -82,7 +91,7 @@
 							<label>Delivery at home setup</label>
 							<frontend_model>gls/adminhtml_system_config_form_field_config</frontend_model>
 							<frontend_type>textarea</frontend_type>
-							<sort_order>5</sort_order>
+							<sort_order>6</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
@@ -93,7 +102,7 @@
 						<ordertohome translate="label">
 							<label>Delivery at home order</label>
 							<frontend_type>text</frontend_type>
-							<sort_order>6</sort_order>
+							<sort_order>7</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
@@ -101,11 +110,39 @@
 								<livraisontohome>1</livraisontohome>
 							</depends>
 						</ordertohome>
+						<livraisontoyou translate="label">
+                            <label>Delivery guaranteed at home</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>8</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </livraisontoyou>                                              
+                        <configtoyou translate="label">
+                            <label>Delivery guaranteed at home setup</label>
+                            <frontend_model>gls/adminhtml_system_config_form_field_config</frontend_model>
+                            <frontend_type>textarea</frontend_type>
+                            <sort_order>9</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                            <depends><livraisontoyou>1</livraisontoyou></depends>
+                        </configtoyou>
+                        <ordertoyou translate="label">
+                            <label>Delivery guaranteed at home order</label>
+                            <frontend_type>text</frontend_type>
+                            <sort_order>10</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                            <depends><livraisontoyou>1</livraisontoyou></depends>
+	                    </ordertoyou> 
 						<livraisonrelay translate="label">
 							<label>Shop Delivery</label>
 							<frontend_type>select</frontend_type>
 							<source_model>adminhtml/system_config_source_yesno</source_model>
-							<sort_order>10</sort_order>
+							<sort_order>11</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
@@ -114,7 +151,7 @@
 							<label>Shop Delivery setup</label>
 							<frontend_model>gls/adminhtml_system_config_form_field_config</frontend_model>
 							<frontend_type>textarea</frontend_type>
-							<sort_order>11</sort_order>
+							<sort_order>12</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
@@ -125,7 +162,7 @@
 						<orderrelay translate="label">
 							<label>Shop Delivery order</label>
 							<frontend_type>text</frontend_type>
-							<sort_order>12</sort_order>
+							<sort_order>13</sort_order>
 							<show_in_default>1</show_in_default>
 							<show_in_website>1</show_in_website>
 							<show_in_store>1</show_in_store>
