@@ -215,7 +215,7 @@
 			<action method="addJs"><script>jquery/jquery.tools.min.js</script></action>
 		    <action method="addItem"><type>skin_js</type><script>js/socolissimo.js</script></action>
 		
-		    <block type="core/text" name="map.js"><action method="setText"><text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR"></script>]]></text></action></block>
+		    <block type="core/text" name="map.js"><action method="setText"><text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR&v=3"></script>]]></text></action></block>
 		   
 		</reference>
 
