@@ -39,7 +39,7 @@
 
 			<block type="core/text" name="map.js">
 				<action method="setText">
-					<text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR"></script>]]></text>
+					<text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR&v=3"></script>]]></text>
 				</action>
 			</block>
 
@@ -74,7 +74,7 @@
 			</action>
 			<block type="core/text" name="map.js">
 				<action method="setText">
-					<text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR"></script>]]></text>
+					<text><![CDATA[<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&region=FR&v=3"></script>]]></text>
 				</action>
 			</block>
 		</reference>
