@@ -42,8 +42,8 @@
                 <connection>
                     <host><![CDATA[localhost]]></host>
                     <username><![CDATA[root]]></username>
-                    <password><![CDATA[]]></password>
-                    <dbname><![CDATA[aomagento]]></dbname>
+                    <password><![CDATA[root]]></password>
+                    <dbname><![CDATA[mage_aomagento]]></dbname>
                     <active>1</active>
                     <profiler>1</profiler>
                 </connection>
